# autonomous_dco_rnd

./: .dockerignore  readme.md
infra/aws/vpc/: Cargo.toml  Dockerfile  vpc_flow.md
infra/azure/nsg/: Cargo.toml  Dockerfile
infra/gcp/scc/: Cargo.toml  Dockerfile
infra/network_tap/gateway/: Cargo.toml  Dockerfile  config.toml
infra/vmware/: Cargo.toml  Dockerfile
infra/vmware/src/: config.rs  main.rs  syslog.rs  transformer.rs  transmitter.rs
infra/vmware/test/: conftest.py  readme.md  run.sh
linux/c2_sensor/: .dockerignore  Cargo.toml  audit.sh  readme.md  run.sh
linux/c2_sensor/deploy/: collector.Dockerfile  config.toml  dashboard.Dockerfile  docker-compose.collector.yaml  docker-compose.standard.yaml  ebpf.Dockerfile  generate_sensor_certs.sh  guarddog.Dockerfile  start_core.sh  supply_chain_scan.sh
linux/c2_sensor/test/: conftest.py  readme.md  run.sh
linux/sentinel/: Cargo.toml  Dockerfile  build.rs  dashboard_config.yaml  docker-compose.yaml  linux-sentinel-deployment.yml  linux-sentinel.service  master.toml  readme.md  run.sh  run_with_dashboard.sh  transmission.md
linux/sentinel/audit/: audit.sh  rust_audit_report.txt
linux/sentinel/dashboard/: Dockerfile  api_server.py  entrypoint.sh  generate_dashboard_certs.sh  requirements.txt
linux/sentinel/src/: config.rs  integrity.rs  lib.rs  main.rs
linux/sentinel/test/: conftest.py  readme.md  run.sh
linux/sentinel/tests/: test_sensor_pipeline.rs
linux/sentinel/utils/: build_offline_bundle.sh  check_baselines.sh  generate_report.sh  sentinel_qa.sh  sentinel_tester.sh
linux/suricata/transmitter/: Cargo.toml  Dockerfile
project_empros/: .gitignore  Cargo.toml  Dockerfile  audit.Dockerfile  audit.sh  build.sh  deploy.sh  infrastructure_specifications.md  mlops_maturation_plan.md  mlops_pipeline.md  nexus.env.example  nist_ai_600_1_control_tracker.md  packages.txt  readme.md  security_controls.md
project_empros/.cargo/: audit.toml
project_empros/adversarial_corpus_templates/: corpus_utils.py  cross_source_temporal.py  readme.md
project_empros/adversarial_corpus_templates/1_Recon/: manifest.md  stage_recon_behavioral.py
project_empros/adversarial_corpus_templates/2_Persistence/: manifest.md  stage_persistence_behavioral.py
project_empros/adversarial_corpus_templates/3_C2/: manifest.md  stage_c2_behavioral.py
project_empros/adversarial_corpus_templates/4_Bypass_Detection/: manifest.md  stage_bypass_behavioral.py
project_empros/adversarial_corpus_templates/5_Lateral_Movement/: manifest.md  stage_lateral_movement_behavioral.py
project_empros/adversarial_corpus_templates/6_Malware_Tradecraft/: manifest.md  stage_malware_behavioral.py
project_empros/adversarial_corpus_templates/7_Exfiltration/: manifest.md  stage_exfiltration_behavioral.py
project_empros/adversarial_corpus_templates/Active-Directory/: manifest.md  stage_active_directory_behavioral.py
project_empros/adversarial_corpus_templates/LOTL/: manifest.md  stage_lotl_behavioral.py
project_empros/adversarial_corpus_templates/Linux_Exploitation/: manifest.md  stage_linux_exploitation_behavioral.py
project_empros/adversarial_corpus_templates/Windows_Exploitation/: manifest.md  stage_windows_exploitation_behavioral.py
project_empros/adversarial_corpus_templates/tools/: manifest.md  stage_tools_supplemental.py
project_empros/analytics/: notes.md
project_empros/analytics/llm_hunter/: Dockerfile  compile-requirements.sh  detonation_enrichment.py  notes.md  orchestrator.py  requirements.in  requirements.txt  state.py
project_empros/deployment_prep/: .gitignore  Makefile  ansible_requirements.yml  detchamber_assets.json  image_manifest.json  python_requirements.txt  readme.md
project_empros/deployment_prep/scan/: Dockerfile  deploy_anchore.py  scan_config.json
project_empros/deployment_prep/scripts/: 01_pull_and_save_images.sh  02_build_custom_images.sh  03_download_python_deps.sh  04_download_ansible_deps.sh  05_download_terraform_deps.sh  05b_cargo_audit.sh  05c_scan_python_supply_chain.sh  06_scan_all_images.sh  07_hash_and_manifest.sh  08_package_bundle.sh  09_verify_bundle.sh  10_load_images.sh  lib_container.sh  validate_deployment.py
project_empros/deployment_prep/supply_chain/: Dockerfile  requirements.txt  scan-requirements.sh
project_empros/deployment_prep/tests/: test_deployment_prep.py  test_detchamber_prereqs.py
project_empros/det_chamber/: readme.md
project_empros/det_chamber/agents/: acquire_core.py  acquire_worker.py  acquisition_agent.py
project_empros/det_chamber/config/: detchamber.toml
project_empros/det_chamber/deploy/: Dockerfile.intake  Dockerfile.windows-engine  docker-compose.yml  kubernetes-deployment.yaml
project_empros/det_chamber/engine/: engine_runner.py  linux_analyzer.py  malware_sandbox.py  sandbox_config.py  summary_schema.py  (+1 more)
project_empros/docs/: mlops_maturation_plan.md  nist_ai_600_1_control_tracker.md  rust_audit_report.txt  security_controls.md
project_empros/img/: logical_flows.md
project_empros/middleware/: Cargo.toml  Dockerfile  readme.md
project_empros/operations/: Makefile  nexus.conf  operators.md
project_empros/supply_chain/: guarddog-config.yaml  guarddog_scan_results.txt  scan-requirements.sh
project_empros/tests/: Dockerfile  Dockerfile.analytics  Dockerfile.detchamber  Dockerfile.governance  Dockerfile.mlops  Dockerfile.offline  Dockerfile.pipeline  Dockerfile.sensors  Dockerfile.services  Dockerfile.siemfed  Execute-CognitiveBypass.sh  Invoke-CrossPollinationStress.py  compile-requirements.sh  conftest.py  docker-compose.yml  nexus-workloads.yaml  pytest.ini  readme.md  requirements.in  requirements.txt  run_tests.sh  test_cross_source_temporal.py  test_data_flow.py  test_e2e_sensor_pipeline.py  test_model_regression.py  test_phase1_pipeline.py  test_phase2_pipeline.py  test_phase3_guardrails.py  test_report_coverage.py  test_s3_query_alignment.py  test_siem_pivot_corpus.py  test_track6_dryrun.py  test_turbovec_mlops.py  test_worker_contracts.py  test_worker_ti_ingest.py
windows/windows_xdr_dev/: Build-XdrAgent.ps1  Cargo.toml  readme.md
(+763 files in other folders)
