[workspace]
resolver = "2"
members = [
    "crates/shared_models",
    "crates/api_server",
    "crates/telemetry_ingest",
    "crates/active_defender",
    "crates/core_hunter",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
mimalloc = { version = "0.1", default-features = false }
axum-server = { version = "0.7", features = ["tls-rustls"] }
sd-notify = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "set-header"] }
libbpf-rs = "0.23"
nix = { version = "0.28", features = ["signal", "process"] }
procfs = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
jsonwebtoken = "9.3"
bcrypt = "0.16"
tower_governor = "0.4"
moka = { version = "0.12", features = ["sync"] }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"