[package]
name = "nexus-azure-nsg-connector"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
azure_identity = "0.21"
azure_storage_blobs = "0.21"
azure_messaging_eventhubs = "0.15"
azure_identity_eventhubs = { package = "azure_identity", version = "1.0" }
azure_core_eventhubs = { package = "azure_core", version = "1.0", default-features = false }
async-trait = "0.1"
azure_data_tables = "0.21"
azure_core = "0.21"
parquet = { version = "53", features = ["async"] }
arrow = "53"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dashmap = "5.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }