[package]
name = "nexus-gcp-scc-connector"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
# Pub/Sub. NOTE: this crate's API moves between minor versions -- pin and
# verify ClientConfig/Subscription/Message method names against the locked
# version before release. Auth resolves via ADC / GKE Workload Identity.
google-cloud-pubsub = "0.25"
google-cloud-googleapis = "0.13"
google-cloud-auth = "0.16"
parquet = { version = "53", features = ["async"] }
arrow = "53"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dashmap = "5.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }