[package]
name = "arkime-ml-gateway"
version = "0.2.0"
edition = "2024"
description = "High-throughput network flow ETL: Redpanda SPI → rich extraction → SQLite WAL → Parquet → Axum gateway"
authors = ["Robert Weber"]

[dependencies]
# Async runtime
tokio      = { version = "1",    features = ["full", "signal"] }
tokio-util = "0.7"

# Kafka/Redpanda consumer
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Serialization & config
simd-json = "0.14"
serde     = { version = "1",    features = ["derive"] }
toml      = "0.8"

# Arrow columnar + Parquet wire format
arrow   = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow", "snap", "zstd"] }

# Durable spool -- SQLite WAL
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTPS POST to Axum gateway
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Session-to-IP cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Integrity stamping -- vendored locally (avoids cross-workspace path dependency)
hmac = "0.12"
sha2 = "0.10"
hex  = "0.4"

# Observability
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["json", "env-filter"] }
metrics                     = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }

# Date/time for partition hints
chrono = { version = "0.4", features = ["clock"] }

# Error handling
anyhow = "1"

# Jemalloc on Linux/macOS only -- excluded automatically on MSVC
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
