[package]
name = "suricata_transmitter"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
tokio    = { version = "1.44", features = ["full", "signal"] }
serde    = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow    = "58.3"
parquet  = "58.3"
bytes    = "1.10"
reqwest  = { version = "0.12", features = ["rustls-tls"] }
notify   = { version = "7", features = ["macos_fsevent"] }
chrono   = "0.4"
uuid     = { version = "1.16", features = ["v4"] }
tracing  = "0.1"
tracing-subscriber = "0.3"
metrics  = "0.24"
metrics-exporter-prometheus = "0.16"
hmac     = "0.12"
sha2     = "0.10"
hex      = "0.4"
regex    = "1.10"
tikv-jemallocator = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"