[package]
name = "worker_qdrant"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
# Runtime
tokio       = { workspace = true }
async-trait = { workspace = true }
async-nats  = { workspace = true }

# Vector DB
qdrant-client = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }

# Parquet → Arrow
arrow   = { workspace = true }
parquet = { workspace = true }
bytes   = { workspace = true }

# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
metrics            = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Utilities
uuid = { workspace = true }

# Allocator
tikv-jemallocator = { workspace = true }

# Internal
lib_siem_core = { workspace = true }