[package]
name = "worker_rlhf"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
# Runtime
tokio       = { workspace = true }
async-trait = { workspace = true }

# Messaging
async-nats = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
bytes      = { workspace = true }

# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
metrics            = { workspace = true }

# Utilities
chrono = { workspace = true }

# Allocator
tikv-jemallocator = { workspace = true }

# Internal
lib_siem_core = { workspace = true }