[package]
name = "worker_soar"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
# Runtime
tokio       = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
bytes      = { workspace = true }

# HTTP (n8n webhook + EDR/FW API calls)
reqwest = { workspace = true }

# Messaging (agent-task publish to core_ingress, DC-N11)
async-nats = { workspace = true }

# Templating (Jinja2-compatible for containment.toml body_template rendering)
minijinja = { workspace = true }

# Agent-task signing (DC-N11) -- HMAC-SHA256 over the canonical task envelope,
# byte-identical to the Python signer the on-host agents verify against.
hmac = { workspace = true }
sha2 = { workspace = true }
hex  = { workspace = true }

# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
metrics            = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Allocator
tikv-jemallocator = { workspace = true }

# Internal
lib_siem_core = { workspace = true }