[package]
name = "nexus_integration_tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "test_durable_consumer"
path = "test_durable_consumer.rs"

[dev-dependencies]
tokio              = { workspace = true }
async-nats         = { workspace = true }
async-trait        = { workspace = true }
tracing-subscriber = { workspace = true }
bytes              = { workspace = true }
futures            = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
