[package]
name = "api_server"
version = "0.7.0"
edition = "2024"
authors = ["Robert Weber"]
description = "Asynchronous Dashboard API and Forensics Gateway"

[dependencies]
shared_models = { path = "../shared_models" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
axum-server.workspace = true
mimalloc.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
tower_governor.workspace = true