[package]
name = "core_hunter"
version = "0.7.0"
edition = "2024"
authors = ["Robert Weber"]
description = "Heuristic Orchestrator, Process Enrichment, and Mitre Evaluation Engine"

[dependencies]
shared_models = { path = "../shared_models" }
procfs.workspace = true
tokio.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
mimalloc.workspace = true
sd-notify.workspace = true