[package]
name = "middleware_ingress"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

# Keep binary output named "core_ingress" so Ansible Quadlet templates
# and Dockerfiles don't need updating.
[[bin]]
name = "core_ingress"
path = "src/main.rs"

[dependencies]
axum          = { workspace = true }
axum-server   = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
async-nats    = { workspace = true }
bytes         = { workspace = true }
hmac          = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
parquet       = { workspace = true }
arrow         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
toml          = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber          = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
