[package]
name = "lib_etl"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
parquet    = { workspace = true }
arrow      = { workspace = true }
bytes      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
notify     = { workspace = true }
