[package]
name = "worker_nexus"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
lib_middleware               = { workspace = true }
async-nats                  = { workspace = true }
bytes                       = { workspace = true }
futures                     = { workspace = true }
hmac                        = { workspace = true }
sha2                        = { workspace = true }
hex                         = { workspace = true }
reqwest                     = { workspace = true }
serde                       = { workspace = true }
toml                        = { workspace = true }
tokio                       = { workspace = true }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
gethostname                 = { workspace = true }
