[package]
name = "worker_splunk"
version = "0.1.0"
edition = "2024"
authors = ["Robert Weber"]

[dependencies]
lib_etl                     = { workspace = true }
lib_middleware              = { workspace = true }
async-nats                  = { workspace = true }
bytes                       = { workspace = true }
reqwest                     = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
toml                        = { workspace = true }
tokio                       = { workspace = true }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
